--- a/settings/nginx/nginx.conf
+++ b/settings/nginx/nginx.conf
@@ -68,7 +68,7 @@ http {
         }
         location /media/{
         autoindex on;
-        alias /srv/ww4/api/media/;
+        root /srv/ww4/api/media/;
     }
 
     }
