--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,12 +29,11 @@ services:
             - WW4API_POSTGRES_PORT=5432
             - WW4API_POSTGRES_PASSWORD=postgres 
             - WW4API_ALLOWED_HOSTS=ww4,ww4api,localhost,127.0.0.1
-            - WW4_MEDIA_ROOT=/home/iaggo/Documents/ProjectsEins/WoodWork40/projects
             - WW4API_X_SCRIPT_NAME=/ww4/
         expose:
             -   8000
-        # volumes:
-        #     - .:/home/app
+        volumes:
+            - ./projects:/home/app/media
 
 
 
