--- a/settings/nginx/nginx.conf
+++ b/settings/nginx/nginx.conf
@@ -66,12 +66,17 @@ http {
             autoindex on;
             alias /srv/ww4/api/staticfiles/;
         }
-        location /media/{
-        autoindex on;
-        root /srv/ww4/api/media/;
-    }
+
+        location /media {
+            alias /srv/ww4/api/media/;
+
+        }
+
+        location /protected {
+            internal;
+            alias /srv/ww4/api/protected/;
+        }
 
     }
 }
-
 
