--- a/settings/nginx/nginx.conf
+++ b/settings/nginx/nginx.conf
@@ -74,7 +74,7 @@ http {
 
         location /protected {
             internal;
-            alias /srv/ww4/api/protected/;
+            root /srv/ww4/api/protected/;
         }
 
     }
