--- a/settings/nginx/Dockerfile
+++ b/settings/nginx/Dockerfile
@@ -4,3 +4,4 @@ RUN apt-get update && mkdir -pv /srv/ww4/context/ && mkdir -pv /srv/ww4/projects
 COPY cors.filter /etc/nginx/cors.filter
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY mime.types /etc/nginx/mime.types
+COPY index.html /srv/ww4/index.html
