--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
             - orion
         restart: always
         container_name: ww4api
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.14
 
         environment:
             - WW4API_EMAIL_USE_TLS=True
@@ -25,17 +28,19 @@ services:
             - WW4API_POSTGRES_DB=woodwork
             - WW4API_POSTGRES_USER=postgres
             - WW4API_POSTGRES_HOST=db
-            - WW4API_ORION_HOST=http://orion:1026
+            - WW4API_ORION_HOST=http://orion-proxy:1027
             - WW4API_POSTGRES_PORT=5432
             - WW4API_POSTGRES_PASSWORD=postgres 
             - WW4API_ALLOWED_HOSTS=ww4,ww4api,localhost,127.0.0.1
             - WW4API_X_SCRIPT_NAME=/ww4/
             - WW4API_PROTECTED_MEDIA_SERVER=django
             - WW4API_PROTECTED_MEDIA_LOCATION_PREFIX=protected
+            - WW4API_KEYROCK_TOKEN_URL=http://keyrock:3005/oauth2/token
+            - WW4API_KEYROCK_CLIENT_ID=b7ac79b1-daef-44ff-9e65-2e3c2ba703f7
+            - WW4API_KEYROCK_CLIENT_SECRET=1043a85d-08e6-470e-8b6e-59d48e96cbfe
+            - WW4API_CONTEXT=http://nginx:80/context/ww4zero.context-ngsi.jsonld
         expose:
             -   8000
-        ports:
-            - 8000:8000
         volumes:
             - ./projects:/home/app/protected
             - ./media:/home/app/media
@@ -47,6 +52,9 @@ services:
         hostname: db
         container_name: db
         restart: always
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.2
         environment:
          - POSTGRES_PASSWORD=postgres
          - POSTGRES_USER=postgres
@@ -60,9 +68,14 @@ services:
         image: mongo:4.4
         hostname: mongo
         container_name: mongo
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.3
         restart: always
         expose:
             - "27017"
+        ports:
+            - 27017:27017
         command: --nojournal
         environment:
             - MONGO_DB_PORT=27017
@@ -80,6 +93,9 @@ services:
         hostname: orion
         container_name: orion
         restart: always
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.4
         depends_on:
             - mongo
         expose:
@@ -114,6 +130,9 @@ services:
         image: timescale/timescaledb-postgis:latest-pg12
         restart: always
         hostname: timescale
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.5
         container_name: timescale
         command: [ "postgres", "-c", "log_statement=none" ]
         healthcheck:
@@ -133,6 +152,9 @@ services:
     mintaka:
         image: fiware/mintaka:0.3.39-distroless
         hostname: mintaka
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.6
         restart: always
         container_name: mintaka
         environment:
@@ -150,31 +172,14 @@ services:
         depends_on:
             - timescale
 
-    pgadmin:
-        container_name: pgadmin
-        image: dpage/pgadmin4
-        hostname: pgadmin
-        restart: always
-        depends_on:
-            - timescale
-        environment:
-            - POSTGRES_DB=orion
-            - POSTGRES_USER=orion
-            - POSTGRES_HOST=timescale
-            - POSTGRES_PASSWORD=orion
-            - PGADMIN_DEFAULT_PASSWORD=orion
-            - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-            - PGADMIN_LISTEN_PORT=5050
-        volumes:
-            - pgadmin-data:/var/lib/pgadmin
-        expose:
-            - 5050
-        ports:
-            - "5050:5050"
+   
     syncthing:
         image: syncthing/syncthing
         container_name: syncthing
         hostname: syncthing
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.8
         environment:
             - PUID=1000
             - PGID=1000
@@ -192,43 +197,27 @@ services:
         hostname: nginx
         build: settings/nginx
         restart: always
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.9
         ports:
             - 80:80
             - 434:434
         tty: true
         volumes:
-            - ./data-models/context:/srv/ww4/context
+            - ./context:/srv/ww4/context
             - ./syncthingFolder/Sync:/srv/ww4/projects
             - ./staticfiles:/srv/ww4/api/staticfiles
             - ./projects:/srv/ww4/api/media
         depends_on:
             - orion
             - syncthing
-        networks:
-            - default
-
-    mysql-db:
-        restart: always
-        image: mysql:5.7
-        hostname: mysql-db
-        container_name: db-mysql
-        networks:
-            default:
-                ipv4_address: 172.18.1.10
-        environment:
-            - 'MYSQL_ROOT_PASSWORD=secret'
-            - 'MYSQL_ROOT_HOST=172.18.1.11'
-        ports:
-            - 3306:3306
-        volumes:
-            - mysql-db:/var/lib/mysql
-
     keyrock:
-        image: fiware/idm:7.8.1
+        image: fiware/idm:7.6.0
         container_name: fiware-keyrock
         hostname: keyrock
         networks:
-            default:
+            woodworkNET:
                 ipv4_address: 172.18.1.11
         depends_on:
             - mysql-db
@@ -238,17 +227,101 @@ services:
         environment:
             - DEBUG=idm:*
             - IDM_DB_HOST=mysql-db
-            - IDM_HOST=keyrock
-            - IDM_PORT=3005
             - IDM_DB_PASS=secret
             - IDM_DB_USER=root
+            - IDM_HOST=http://localhost:3005
+            - IDM_PORT=3005
+            - IDM_HTTPS_PORT=3443
             - IDM_ADMIN_USER=admin
             - IDM_ADMIN_EMAIL=iaggo.capitanio@gmail.com
-            - IDM_ADMIN_PASS=ww4cri
+            - IDM_ADMIN_PASS=test
             - IDM_EMAIL_HOST=mailer
             - IDM_EMAIL_PORT=25
             - IDM_ENCRYPTION_KEY=ww4Cypher
-            - IDM_OAUTH_AUTH_LIFETIME=900 # 15 min
+            - IDM_OAUTH_AUTH_LIFETIME=18000 # 5 hours
+
+        healthcheck:
+            interval: 5s
+    
+        
+    mysql-db:
+        restart: always
+        image: mysql:5.7
+        hostname: mysql-db
+        container_name: db-mysql
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.10
+        expose:
+            - 3306
+        ports:
+            - 3306:3306
+        environment:
+            - 'MYSQL_ROOT_PASSWORD=secret'
+            - "MYSQL_ROOT_HOST=172.18.1.11"
+        volumes:
+            - mysql-db:/var/lib/mysql
+    
+    
+    orion-proxy:
+        image: fiware/pep-proxy:8.1.0-distroless
+        container_name: fiware-orion-proxy
+        hostname: orion-proxy
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.12
+        depends_on:
+            keyrock:
+                condition: service_started
+        deploy:
+            restart_policy:
+                condition: on-failure
+        ports:
+            - "1027:1027"
+        expose:
+            - "1027"
+        environment:
+            - DEBUG=pep-proxy:*
+            - PEP_PROXY_DEBUG=true
+            - PEP_PROXY_APP_HOST=orion
+            - PEP_PROXY_APP_PORT=1026
+            - PEP_PROXY_PORT=1027
+            - PEP_PROXY_IDM_HOST=keyrock
+            - PEP_PROXY_HTTPS_ENABLED=false
+            - PEP_PROXY_IDM_SSL_ENABLED=false
+            - PEP_PROXY_IDM_PORT=3005
+            - PEP_PROXY_AUTH_ENABLED=false
+            - PEP_PROXY_APP_ID=b7ac79b1-daef-44ff-9e65-2e3c2ba703f7
+            - PEP_PROXY_USERNAME=pep_proxy_7dab373c-1b22-41c3-a390-4d27634d45af
+            - PEP_PROXY_PUBLIC_PATHS=/version
+            - PEP_PASSWORD=pep_proxy_fadd3398-37f5-4a5a-a358-1b666901f99c
+            - PEP_PROXY_MAGIC_KEY=1234
+        healthcheck:
+            test: curl --fail -s http://orion-proxy:1027/version || exit 1
+
+    mailer:
+        restart: always
+        image: mazdermind/docker-mail-relay
+        hostname: mailer
+        container_name: mailer
+        networks:
+            woodworkNET:
+                ipv4_address: 172.18.1.13
+        expose: 
+            - 25
+        environment:
+            - SMTP_LOGIN=ww4wood@gmail.com
+            - SMTP_PASSWORD=mwnwuekrexvhzzgr
+            - EXT_RELAY_HOST=smtp.gmail.com
+            - EXT_RELAY_PORT=587
+            - ACCEPTED_NETWORKS=172.18.1.0/24
+            - USE_TLS=yes
+networks:
+    woodworkNET:
+        ipam:
+            config:
+                - subnet: 172.18.1.0/24
+
 
 volumes:
     ww4api-data:
@@ -263,5 +336,4 @@ volumes:
         driver: local
     pgadmin-data:
         driver: local
-    mysql-db: 
-        driver: local
+    mysql-db: ~
