adding timeout to nginx

--- a/settings/nginx/nginx.conf
+++ b/settings/nginx/nginx.conf
@@ -20,11 +20,15 @@ http {
         index index.html;
         keepalive_timeout 1s;
         keepalive_requests 5000;
+        client_body_timeout 60s;
+        client_header_timeout 60s;
+        keepalive_timeout 75s;
+        send_timeout 60s;
         location / {
             try_files $uri $uri/ =404;
 
         }
-        
+
 
         location /context {
             autoindex on;
