--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,8 @@ services:
             - POSTGRES_DB=woodwork
         expose:
             - 5432
+        ports:
+            -5432:5432
         volumes:
             - postgres-db:/var/lib/postgresql/data
 
