--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -75,6 +75,8 @@ services:
         expose:
             - "27017"
         command: --nojournal
+        ports:
+            - 27017:27017
         environment:
             - MONGO_DB_PORT=27017
 
