--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -307,28 +307,28 @@ services:
             - SMTP_LOGIN=ww4wood@gmail.com
             - SMTP_PASSWORD=mwnwuekrexvhzzgr
             - EXT_RELAY_HOST=smtp.gmail.com
-            - EXT_RELAY_PORT=587
+            - EXT_RELAY_PORT=587x
             - ACCEPTED_NETWORKS=172.18.1.0/24
             - USE_TLS=yes
 
-        watcher:
-            hostname: watcher
-            image: iaggo/watcher:0.0.1
-            restart: always
-            tty: true
-            volumes:
-                - ./projects:/home/app/Projects
-                - ./logs:/home/app/logs
-            environment:
-            - CLIENT_ID=b33ed854-1682-4d41-a035-4b7be543790b
-            - CLIENT_SECRET=7e60884d-8cb9-4795-9584-8af8b807916c
-            - TOKEN_URL=http://keyrock:3005/oauth2/token
-            - WW4_GET_CUSTOMER_URL=http//ww4api:8000/api/v1/accounts/get-customer/
-            - PROJECTS_DIR=/home/app/
-            - ORION_HOST=http://orion-proxy:1027
-            - NGSI_LD_CONTEXT=http://nginx:80/context/ww4zero.context-ngsi.jsonld
-            networks:
-                - default
+    watcher:
+        hostname: watcher
+        image: iaggo/watcher:0.0.1
+        restart: always
+        tty: true
+        volumes:
+            - ./projects:/home/app/Projects
+            - ./logs:/home/app/logs
+        environment:
+        - CLIENT_ID=b33ed854-1682-4d41-a035-4b7be543790b
+        - CLIENT_SECRET=7e60884d-8cb9-4795-9584-8af8b807916c
+        - TOKEN_URL=http://keyrock:3005/oauth2/token
+        - WW4_GET_CUSTOMER_URL=http//ww4api:8000/api/v1/accounts/get-customer/
+        - PROJECTS_DIR=/home/app/
+        - ORION_HOST=http://orion-proxy:1027
+        - NGSI_LD_CONTEXT=http://nginx:80/context/ww4zero.context-ngsi.jsonld
+        networks:
+            - default
 
 networks:
     woodworkNET:
