--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -324,7 +324,7 @@ services:
         - CLIENT_SECRET=7e60884d-8cb9-4795-9584-8af8b807916c
         - TOKEN_URL=http://keyrock:3005/oauth2/token
         - WW4_GET_CUSTOMER_URL=http://ww4api:8000/api/v1/accounts/get-customer/
-        - PROJECTS_DIR=/home/app/
+        - PROJECTS_DIR=/home/app/Projects/project
         - ORION_HOST=http://orion-proxy:1027
         - NGSI_LD_CONTEXT=http://nginx:80/context/ww4zero.context-ngsi.jsonld
         networks:
