--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -180,7 +180,7 @@ services:
             - PUID=1000
             - PGID=1000
         volumes:
-            - ./projects/project:/var/syncthing/
+            - ./projects/project:/var/syncthing/Sync
         expose:
             - 8384
         ports:
